# agent_january_rewo

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README-es.md  README.md  claude.md  docker-compose.yml  gemini.md  langgraph.json  pyproject.toml
.claude/agents/: agent-frontend.md  architect-langgraph.md  tool-checker.md
.cursor/commands/: checktool.md
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
spec/: 00-worker-tools-refactor-plan.md  01-architecture-analysis-rewoo-vs-alternatives.md  01-architecture-decision-tree.md  02-migration-implementation-plan.md  prd.md  progress.txt
src/: __init__.py
src/agent/: __init__.py  agent.py  llm.py  node.py  state.py
src/api/: __init__.py  main.py
src/database/: __init__.py  config.py  session.py
src/models/: __ini__.py  __init__.py
src/nutrition_agent/: __init__.py  graph.py  state.py
src/nutrition_agent/models/: __init__.py  diet_plan.py  nutritional_targets.py  tools.py  user_profile.py
src/nutrition_agent/nodes/: __init__.py  calculation.py  data_collection.py  meal_review_batch.py  recipe_generation_batch.py  recipe_generation_single.py  validation.py
src/nutrition_agent/prompts/: __init__.py  data_collection.py  recipe_generation.py
src/nutrition_agent/routes/: __init__.py
src/rewoo_agent/: __init__.py  state.py
src/rewoo_agent/nodes/: __init__.py
src/rewoo_agent/routes/: __init__.py
src/shared/: __init__.py  enums.py  llm.py  tools.py
tests/: __init__.py
tests/evaluation/: __init__.py  eval_fetch_recipe_nutrition_facts.py  eval_recipe_generation.py
tests/nodes/: test_validation.py
tests/quick_tool_tests/: __init__.py  calculate_recipe_nutrition_test.py  test_calculation_node.py
tests/tools/: __init__.py  test_calculate_recipe_nutrition.py  test_consolidate_shopping_list.py  test_generate_nutritional_plan.py  test_generate_nutritional_plan_complement.py  test_get_meal_distribution.py  test_shared_tools.py  test_sum_ingredients_kcal.py  test_sum_total_kcal.py
ui/: package-lock.json  package.json  tsconfig.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/canvas/: CanvasDebugPanel.tsx  DietInfoHeader.tsx  DietPlanCanvas.tsx  EmptyCanvas.tsx  MacrosTable.tsx  MealCard.tsx  ShoppingList.tsx  index.ts
ui/components/forms/: ExcludedFoodInput.tsx  UserProfileForm.tsx  UserProfileFormView.tsx  index.ts
ui/components/hitl/: MealPlanReview.tsx  MealPlanReviewView.tsx  index.ts  (+2 more)
ui/hooks/: index.ts  useAgentPhase.ts  useMediaQuery.ts  useMockData.ts
ui/lib/: config.ts  constants.ts  mock-data.ts  types.ts  validations.ts
ui/styles/: copilotkit-overrides.css
(+37 files in other folders)
