[project]
name = "agent-january-rewoo"
version = "0.1.0"
description = "Agente ReWOO de alto rendimiento con LangGraph"
authors=[{name="Pablo Torres", email="tpablo724@gmail.com"},]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=1.4.0",
    "fastapi[standard]>=0.115.0,<0.116.0",
    "jinja2>=3.1.6",
    "langchain==1",
    "langchain-google-community>=2.0.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",
    "langgraph",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "ragas>=0.0.19",
    "langgraph-api==0.6",
    "copilotkit==0.1.72",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.11",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-bandit
    "S",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testPaths = ["tests"]
python_files = ["test_*.py"]
